<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.todoapp.addedittask.AddEditTaskViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.todoapp.ScrollChildSwipeRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:enabled="@{viewmodel.dataLoading}"
            app:refreshing="@{viewmodel.dataLoading}">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                    <EditText
                        android:id="@+id/add_task_title_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/title_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:maxLines="1"
                        android:minHeight="48dp"
                        android:text="@={viewmodel.title}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/add_task_description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="@string/description_hint"
                        android:imeOptions="flagNoExtractUi"
                        android:text="@={viewmodel.description}" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/priority"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <com.example.todoapp.customviews.PriorityPicker
                        android:id="@+id/add_task_priority_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onChangeListener="@{(progress)-> viewmodel.setPriority(progress)}"
                        android:progress="@{viewmodel.priority}"
                        app:colors="@array/note_color_array" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/activity_horizontal_margin"
                        android:text="Set Reminder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <Button
                        android:id="@+id/reminder_button"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:hint="00:00, 25 Aug"
                        android:textAllCaps="false"
                        android:textColor="?attr/colorOnSurface"
                        app:icon="@drawable/ic_reminder"
                        app:iconTint="?attr/colorOnSurface" />
                </LinearLayout>
            </ScrollView>
        </com.example.todoapp.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:onClick="@{() -> viewmodel.saveTask()}"
            android:src="@drawable/ic_done"
            app:fabSize="normal"
            app:layout_anchor="@id/refresh_layout"
            app:layout_anchorGravity="bottom|right|end" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>