<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.widget.CompoundButton" />

        <variable
            name="task"
            type="com.example.todoapp.data.Task" />

        <variable
            name="viewmodel"
            type="com.example.todoapp.tasks.TasksViewModel" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true">

        <View
            android:id="@+id/priority_color"
            android:layout_width="5dp"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:tag="@{task.id}"
            app:priorityColor="@{task.priority}"
            tools:background="?attr/colorSecondary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/task_container"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:onClick="@{() -> viewmodel.openTask(task.id)}"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/list_item_padding"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/list_item_padding">

            <CheckBox
                android:id="@+id/complete_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:checked="@{task.completed}"
                android:onClick="@{(view) -> viewmodel.completeTask(task, ((CompoundButton)view).isChecked())}" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/date_text"
                app:layout_constraintStart_toEndOf="@id/complete_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@{task.titleForList}"
                app:completedTask="@{task.completed}"
                android:alpha="@{task.completed ? 0.5f: 1.0f}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 />

            <TextView
                android:id="@+id/date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/complete_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:formattedDate="@{task.date}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>