...

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.example.todoapp.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_task_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/add_task"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
...
